--- a/BookListRazor/Pages/BookList/Index.cshtml
+++ b/BookListRazor/Pages/BookList/Index.cshtml
@@ -39,7 +39,7 @@
                                 </td>
                                 <td>
                                     <button asp-page-handler="Delete" asp-route-id="@item.Id" class="btn btn-danger btn-sm" onclick="return confirm('Are you sure you want to delete?')">Delete</button>
-                                    <a asp-page="Edit111" asp-route-id="@item.Id" button class="btn btn-success btn-sm">Edit</a>
+                                    <a asp-page="Edit" asp-route-id="@item.Id" button class="btn btn-success btn-sm">Edit111</a>
                                 </td>
                             </tr>
                         }
