--- a/BookListRazor/Pages/BookList/Edit.cshtml
+++ b/BookListRazor/Pages/BookList/Edit.cshtml
@@ -11,30 +11,30 @@
         <div class="text-danger" asp-validation-summary="ModelOnly"></div>
         <div class="form-group row">
             <div class="col-3">
-                <label asp-for="Book.Name"></label>
+                <label asp-for="Book.FName"></label>
             </div>
             <div class="col-6">
-                <input asp-for="Book.Name"></input>
+                <input asp-for="Book.FName"></input>
             </div>
-            <span asp-validation-for="Book.Name" class="text-danger"></span>
+            <span asp-validation-for="Book.FName" class="text-danger"></span>
         </div>
         <div class="form-group row">
             <div class="col-3">
-                <label asp-for="Book.Author"></label>
+                <label asp-for="Book.LName"></label>
             </div>
             <div class="col-6">
-                <input asp-for="Book.Author"></input>
+                <input asp-for="Book.LName"></input>
             </div>
-            <span asp-validation-for="Book.Author" class="text-danger"></span>
+            <span asp-validation-for="Book.LName" class="text-danger"></span>
         </div>
         <div class="form-group row">
             <div class="col-3">
-                <label asp-for="Book.ISBN"></label>
+                <label asp-for="Book.Emailid"></label>
             </div>
             <div class="col-6">
-                <input asp-for="Book.ISBN"></input>
+                <input asp-for="Book.Emailid"></input>
             </div>
-            <span asp-validation-for="Book.ISBN" class="text-danger"></span>
+            <span asp-validation-for="Book.Emailid" class="text-danger"></span>
         </div>
         <div class="form-group row">
             <div class="col-3 offset-3">
