--- a/BookListRazor/Pages/BookList/Index.cshtml
+++ b/BookListRazor/Pages/BookList/Index.cshtml
@@ -19,10 +19,10 @@
                     <table class="table table-striped border">
                         <tr class="table-secondary">
                             <th>
-                                <label asp-for="Books.FirstOrDefault().Name"></label>
+                                <label asp-for="Books.FirstOrDefault().FName"></label>
                             </th>
                             <th>
-                                @Html.DisplayNameFor(m => m.Books.FirstOrDefault().Author)
+                                @Html.DisplayNameFor(m => m.Books.FirstOrDefault().LName)
                             </th>
                             <th>
 
@@ -32,10 +32,10 @@
                         {
                             <tr>
                                 <td>
-                                    @Html.DisplayFor(m => item.Name)
+                                    @Html.DisplayFor(m => item.FName)
                                 </td>
                                 <td>
-                                    @Html.DisplayFor(m => item.Author)
+                                    @Html.DisplayFor(m => item.LName)
                                 </td>
                                 <td>
                                     <button asp-page-handler="Delete" asp-route-id="@item.Id" class="btn btn-danger btn-sm" onclick="return confirm('Are you sure you want to delete?')">Delete</button>
@@ -60,7 +60,7 @@
         <div class="col-12 border p-3">
             <table id="DT_load" class="table table-striped table-bordered" style="width:100%;">
                 <thead>
-                <th>Name</th>
+                <th>Name1111111</th>
                 <th>Author</th>
                 <th>ISBN</th>
                 <th> </th>
