--- a/BookListRazor/Pages/BookList/Create.cshtml
+++ b/BookListRazor/Pages/BookList/Create.cshtml
@@ -36,6 +36,33 @@
             <span asp-validation-for="Book.Emailid" class="text-danger"></span>
         </div>
         <div class="form-group row">
+            <div class="col-3">
+                <label asp-for="Book.line1"></label>
+            </div>
+            <div class="col-6">
+                <input asp-for="Book.line1"></input>
+            </div>
+            <span asp-validation-for="Book.line1" class="text-danger"></span>
+        </div>
+        <div class="form-group row">
+            <div class="col-3">
+                <label asp-for="Book.city"></label>
+            </div>
+            <div class="col-6">
+                <input asp-for="Book.city"></input>
+            </div>
+            <span asp-validation-for="Book.city" class="text-danger"></span>
+        </div>
+        <div class="form-group row">
+            <div class="col-3">
+                <label asp-for="Book.state"></label>
+            </div>
+            <div class="col-6">
+                <input asp-for="Book.state"></input>
+            </div>
+            <span asp-validation-for="Book.state" class="text-danger"></span>
+        </div>
+        <div class="form-group row">
             <div class="col-3 offset-3">
                 <input type="submit" value="Create" class="btn btn-primary form-control" />
             </div>
