--- a/BookListRazor/Pages/Shared/_Layout.cshtml
+++ b/BookListRazor/Pages/Shared/_Layout.cshtml
@@ -26,7 +26,10 @@
                             <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/BookList/Index">Book</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/BookList/Index">Dashboard</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/BookList/Ewaste">Donate</a>
                         </li>
                     </ul>
                 </div>
