--- a/BookListRazor/Pages/BookList/Donate.cshtml
+++ b/BookListRazor/Pages/BookList/Donate.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model BookListRazor.Pages.BookList.SurveyEwasteModel
+@model BookListRazor.Pages.BookList.CreateModel
 
 <br/>
 <h2 class="text-info">Create New Book</h2>
@@ -14,7 +14,7 @@
             </div>
             <div class="col-6">
                 <input asp-for="Book.FName"></input>
-            </div>                      
+            </div>
             <span asp-validation-for="Book.FName" class="text-danger"></span>
         </div>
         <div class="form-group row">
@@ -67,7 +67,7 @@
                 <input type="submit" value="Create" class="btn btn-primary form-control" />
             </div>
             <div class="col-3">
-                <a asp-page="DonateEwaste" class="btn btn-success form-control">Next</a> @*text-white*@
+                <a asp-page="Index" class="btn btn-success form-control">Back to List</a> @*text-white*@
             </div>
         </div>
     </form>
