--- a/BookListRazor/Pages/BookList/Ewaste.cshtml
+++ b/BookListRazor/Pages/BookList/Ewaste.cshtml
@@ -4,10 +4,80 @@
     ViewData["Title"] = "Home page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome RD!</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-    <div class="col-3">
-        <a asp-page="SurveyEwaste" class="btn btn-info form-control text-white">Donate Now</a>
-    </div>
+
+
+
+
+
+<div class="text-left">
+    <h3 class="display-4">Electronics Donation and Recycling By Deloitte</h3>
+    <hr style="height:5px;
+        border-width:0;
+        color:forestgreen;
+        background-color:forestgreen">
+    <p> Electronics donation and recycling is a great way to help conserve resources and natural materials. It is important to make sure you are donating and/or recycling electronics safely and correctly.</p>
 </div>
+
+<div id="demo" class="col-sm, carousel slide" data-ride="carousel">
+
+    <!-- Indicators -->
+    <ul class="carousel-indicators">
+        <li data-target="#demo" data-slide-to="0" data-interval="" class="active"></li>
+        <li data-target="#demo" data-slide-to="1" data-interval=""></li>
+        <li data-target="#demo" data-slide-to="2" data-interval=""></li>
+    </ul>
+
+    <!-- The slideshow -->
+    <div class="carousel-inner">
+        <div class="carousel-item active">
+            <img class="d-block w-100" src="https://previews.123rf.com/images/damrongratta/damrongratta2002/damrongratta200200011/139897734-electronic-waste-broken-or-damage-in-recycle-bin-in-the-room-with-white-wall-and-leave-blank-space-a.jpg" alt="Ewaste in dustbin" >
+        </div>
+        <div class="carousel-item">
+            <img class="d-block w-100" src="https://www.rts.com/wp-content/uploads/2020/09/Electronics-recycling_New-York-1024x683.jpeg" alt="Box of Ewaste" >
+        </div>
+        <div class="carousel-item">
+            <img class="d-block w-100" src="https://d33wubrfki0l68.cloudfront.net/494868f6f10b3b467d7fa7762a931180078885cd/fbb57/images/recycleewaste.jpg" alt="New York" >
+        </div>
+    </div>
+
+    <!-- Left and right controls -->
+    <a class="carousel-control-prev" href="#demo" data-slide="prev">
+        <span class="carousel-control-prev-icon"></span>
+    </a>
+    <a class="carousel-control-next" href="#demo" data-slide="next">
+        <span class="carousel-control-next-icon"></span>
+    </a>
+
+</div>
+
+<div class="col-sm">
+    <h1>Why Donate or Recycle Electronics?</h1>
+    <hr style="height: 5px;
+                        border-width: thin;
+                        color: forestgreen;
+                        background-color: forestgreen;
+                        text-align: left;
+                        margin-left: 0
+                        ">
+    <p> Electronic products are made from valuable resources and materials, including metals, plastics, and glass, all of which require energy to mine and manufacture. Donating or recycling consumer electronics conserves our natural resources and avoids air and water pollution, as well as greenhouse gas emissions that are caused by manufacturing virgin materials. </p>
+    <h4>For example:</h4>
+    <p>Recycling one million laptops saves the energy equivalent to the electricity used by more than 3,500 US homes in a year.</p>
+    <p>For every million cell phones we recycle, 35 thousand pounds of copper, 772 pounds of silver, 75 pounds of gold and 33 pounds of palladium can be recovered.</p>
+
+</div>
+@*<div class="container">
+    <div class="row">
+        <div class="col-sm">
+            <img src="https://www.w3schools.com/w3images/lights.jpg" alt="ASDDDD" class="float-right" />
+        </div>
+        
+        
+
+    </div>
+        </div>*@
+
+
+<div align="center" class="col-3 offset-4">
+    <a asp-page="SurveyEwaste" class="btn btn-info form-control text-white align-items-center ">Donate Now</a>
+</div>
+
