--- a/BookListRazor/Pages/Index.cshtml
+++ b/BookListRazor/Pages/Index.cshtml
@@ -5,6 +5,6 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome RD!</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Welcome to Climate Page by Hackuna Matata</h1>
+    <p>Click on DONATE to proceed with Ewaste Donation</p>
 </div>
