--- a/BookListRazor/Pages/Shared/_Layout.cshtml
+++ b/BookListRazor/Pages/Shared/_Layout.cshtml
@@ -44,7 +44,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2020 - BookListRazor - <a asp-area="" asp-page="/Privacy">Privacy</a>
+            &copy; 2021 Winc Girl! Hack It - Hackuna Matata - <a asp-area="" asp-page="/Privacy">About the Team</a>
         </div>
     </footer>
 
