--- a/BookListRazor/Pages/Shared/_Layout.cshtml
+++ b/BookListRazor/Pages/Shared/_Layout.cshtml
@@ -31,6 +31,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/BookList/Ewaste">Donate</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/BookList/FoodCalculator">Food-Calculator</a>
+                        </li>
                     </ul>
                 </div>
             </div>
@@ -57,5 +60,7 @@
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 
     @RenderSection("Scripts", required: false)
+    @RenderSection("Styles", required: false)
+   
 </body>
 </html>
