Enhancement: Links for answers to questionnaire

--- a/BookListRazor/Pages/WorldClimate/Ewaste.cshtml
+++ b/BookListRazor/Pages/WorldClimate/Ewaste.cshtml
@@ -191,9 +191,13 @@
         
     </div>
 </div>
-
-
-
 <br />
-<a asp-page="DonateEwaste" class="btn btn-info form-control text-white align-items-center  ">Let's Get Started</a>
+
+<div class="container">
+    We have made a fun questionnaire to check how much you know about E-waste. Are you excited? <a asp-page="Readmore" class="align-items-center  ">Know your Facts</a>
+</div>
+
+
+    <br />
+    <a asp-page="DonateEwaste" class="btn btn-info form-control text-white align-items-center  ">Let's Get Started</a>
 
