--- a/BookListRazor/Pages/WorldClimate/DonateEwaste.cshtml
+++ b/BookListRazor/Pages/WorldClimate/DonateEwaste.cshtml
@@ -96,7 +96,13 @@
         </div>
         <div class="form-group row">
             <div class="col-3 offset-3">
-                <input type="submit" value="Create" class="btn btn-primary form-control" />
+                <input type="submit" value="Create" class="btn btn-success form-control" />
+            </div>
+
+        </div>
+        <div class="form-group row">
+            <div class="col-3 offset-3">
+                <a asp-page="/WorldClimate/Ewaste" class="btn btn-outline-success form-control">Previous</a> @*text-white*@
             </div>
 
         </div>
