Defects Ewaste#18 to #20 - fixed

--- a/BookListRazor/Pages/WorldClimate/Ewaste.cshtml
+++ b/BookListRazor/Pages/WorldClimate/Ewaste.cshtml
@@ -134,7 +134,7 @@
                         <h5 class="card-title">Cool Ceramic Mug</h5>
                         <p class="card-text">Wake up to your morning coffee with a self appreciation for working towards sustainable living!</p>
                         <hr />
-                        <a href="https://www.euroceramicainc.com/blog/is-ceramic-pottery-sustainable/" target="_blank">View Full</a>
+                        <a asp-page="WinFreebies" target="_blank">View Full</a>
                     </div>
                 </div>
             </div>
@@ -145,7 +145,8 @@
                         <h5 class="card-title">Friendly Desk plant</h5>
                         <p class="card-text">A friend on the desk to remind you that climate change is real!</p>
                         <hr />
-                        <a asp-page="DonateEwaste">View Full</a>
+                        <a asp-page="WinFreebies" target="_blank">View Full</a>
+                        @*C:\Users\randas\Documents\Book List Project\BookListRazor\BookListRazor\Pages\WorldClimate\WinFreebies.cshtml*@
                     </div>
                 </div>
             </div>
@@ -156,7 +157,7 @@
                         <h5 class="card-title">Your Sustainable Planner</h5>
                         <p class="card-text">Keep your sustainable plans in check in this planner.</p><br />
                         <hr />
-                        <a asp-page="DonateEwaste">View Full</a>
+                        <a asp-page="WinFreebies" target="_blank">View Full</a>
                     </div>
                 </div>
             </div>
@@ -173,7 +174,7 @@
                     <h5 class="card-title">Awesome SUS tee</h5>
                     <p class="card-text">Flaunt this tee shirt on your next zoom call and start a conversation on sustainability.</p>
                     <hr />
-                    <a asp-page="/WorldClimate/Ewaste">View Full</a>
+                    <a asp-page="WinFreebies" target="_blank">View Full</a>
                 </div>
             </div>
         </div>
@@ -184,7 +185,7 @@
                     <h5 class="card-title">Awesome SUS tee(back)!</h5>
                     <p class="card-text">Show us off! ;)</p>
                     <hr />
-                    <a asp-page="/WorldClimate/FoodCalculator">View Full</a>
+                    <a asp-page="WinFreebies" target="_blank">View Full</a>
                 </div>
             </div>
         </div>
