--- a/BookListRazor/Pages/Index.cshtml
+++ b/BookListRazor/Pages/Index.cshtml
@@ -47,7 +47,7 @@
                     <img src="~/img/Logo/Logo 1.png" class="card-img-top img-center" style="transform: rotate(-20deg); height:200px; width:150px; margin-left:80px;" />
                     <div class="card-body">
                         <h5 class="card-title"> E-waste Donation</h5>
-                        <p class="card-text">Team HACKuna Matata's unique idea to recycle unusable electronic items in Deloitte. Let's make a difference together and get exciting goodies!</p></br>
+                        <p class="card-text">Team HACKuna Matata's unique idea to recycle unusable electronic items in Deloitte. Be part of the solution and let's join hands in reducing our electronic waste together!</p>
                         <hr />
                         <a asp-page="/WorldClimate/Ewaste">LET'S DONATE</a>
                     </div>
