--- a/BookListRazor/Pages/WorldClimate/TravelStats.cshtml
+++ b/BookListRazor/Pages/WorldClimate/TravelStats.cshtml
@@ -24,20 +24,25 @@
 <h1 class="neon text-white">Travel Statistics</h1>
 <br />
 
-<div class=" container" style="padding: 30px">
+<div class="container" style="padding: 30px">
     <div class="display-4">
         <table style="">
             <tbody>
                 <tr>
-                    <td style="background-color:white;opacity:0.7;"><img src="~/img/TravelChart/bar chart.png" style="height: 250px; width: 350px " /></td>
+                    <td style="background-color:white;opacity:0.7;"><img src="~/img/TravelChart/bar chart.png" style="height: 450px; width: 600px " /></td>
                     <td></td>
                 </tr>
+            </tbody>
+        </table>
+        <br />
+        <table style="margin-left:350px;">
+            <tbody>
                 <tr>
                     <td></td>
                     <td><img src="~/img/TravelChart/mumbai Railway Map.gif" style="height: 700px; width: 700px; opacity:0.8" /></td>
                     @*<td><img src="~/img/TravelChart/4-EggCheeseSandwich.png" style="height: 250px; width: 350px " /></td>
-        <td><img src="~/img/TravelChart/5-ChickenCheeseSandwich.png" style="height: 250px; width: 350px " /></td>
-        <td><img src="~/img/TravelChart/6-VegRice.png" style="height: 250px; width: 350px " /></td>*@
+                    <td><img src="~/img/TravelChart/5-ChickenCheeseSandwich.png" style="height: 250px; width: 350px " /></td>
+                    <td><img src="~/img/TravelChart/6-VegRice.png" style="height: 250px; width: 350px " /></td>*@
                 </tr>
                 <tr>
                     @*<td><img src="~/img/TravelChart/7-ChickenSoup.png" style="height: 250px; width: 350px " /></td>
@@ -47,17 +52,17 @@
                 <tr><td></td></tr>
                 @*<tr><td></td></tr>*@
                 @*<tr><td></td></tr>
-                    <tr><td></td></tr>*@
+                <tr><td></td></tr>*@
             </tbody>
         </table>
         @*<img src="~/img/1-CheeseSandwich.png" style="height: 250px; width: 350px" /> workssss
-            <img src="~/img/Photos/1-CheeseSandwich.png" style="height: 250px; width: 350px " /> workssss
-            <img src="~/img/Photos/1-CheeseSandwich.png" style="height: 250px; width: 350px " /> workssss*@
+        <img src="~/img/Photos/1-CheeseSandwich.png" style="height: 250px; width: 350px " /> workssss
+        <img src="~/img/Photos/1-CheeseSandwich.png" style="height: 250px; width: 350px " /> workssss*@
     </div>
 
     <div class="form-group row">
-        <div class="col-3">
-            <a asp-page="/WorldClimate/CascadingDropdownsModel" class="btn btn-primary form-control">Back</a> @*text-white*@
+        <div class="col-3 offset-9">
+            <a asp-page="/WorldClimate/CascadingDropdownsModel" class="btn btn-success form-control">Back</a> @*text-white*@
             @*C:\Users\randas\Documents\Book List Project\BookListRazor\BookListRazor\Pages\WorldClimate\CascadingDropdownsModel.cshtml*@
         </div>
     </div>
