Food screens - aesthetics - fixed

--- a/BookListRazor/Pages/WorldClimate/FoodCalculator.cshtml
+++ b/BookListRazor/Pages/WorldClimate/FoodCalculator.cshtml
@@ -13,11 +13,11 @@
         }
     </style>
     <div class="container"  style="align-content:flex-end ; ">
-        <h1 class="neon display-4 text-monospace ">Consider Food For Thought</h1>
-        <a class="nav-link text-dark" style="font-weight:200" asp-area="" asp-page="/WorldClimate/FoodStats">Check your food Stats here!</a>
+        <h1 class="neon display-4 text-monospace display-1">Consider Food For Thought</h1> 
+        <a class="nav-link text-light offset-1" style="font-weight:200" asp-area="" asp-page="/WorldClimate/FoodStats">Check your food Stats here!</a>
     </div>
 
-    <div class="container" style="padding-top:10px;padding-left:100px;background-color: transparent; opacity:0.9">
+    <div class="container" style="padding-top:10px;padding-left:100px;background-color: transparent;">
         <div class="container" hidden style="align-content:flex-end">
             <h1 class="neon display-4 text-monospace ">Consider Food For Thought</h1><br />
             <a class="nav-link text-white " asp-area="" asp-page="/WorldClimate/FoodStats">Check your food Stats here!</a>
@@ -215,7 +215,7 @@
 
             <div class="container meal">
                 <div class="col-md-offset-4 ">
-                    <button type="submit" id="calculate" asp-route-data="foo" asp-page-handler="SellProduct" class="btn btn-primary ">Calculate</button>
+                    <button type="submit" id="calculate" asp-route-data="foo" asp-page-handler="SellProduct" class="btn btn-success text-white ">Calculate</button>
                     @*onclick="document.getElementById('firstMeal').value"*@
                 </div>
             </div>
