--- a/BookListRazor/Pages/WorldClimate/FoodStats.cshtml
+++ b/BookListRazor/Pages/WorldClimate/FoodStats.cshtml
@@ -1,13 +1,8 @@
 ﻿@page
 @*@model BookListRazor.Pages.FoodCalculatorModel*@
 <style>
-    body {
-        background-image: url("../../img/Deloitte/infrastructure/DEB_8923.jpg");
-        background-repeat: no-repeat, repeat;
-        background-position: center; /* Center the image */
-        background-size: cover; /* Resize the background image to cover the entire container */
-        /*    padding-top: 50px;*/
-    }
+body { background-image: url("https://media.istockphoto.com/photos/super-food-or-vegetarian-food-concept-picture-id1026051248?k=6&m=1026051248&s=612x612&w=0&h=L0OI0AX2ZtE5dGtEZ75vobhzCSpmhNAfOMEg37bUTGI=");
+       /*        background-image: url("../../img/Deloitte/infrastructure/DEB_8923.jpg");*/ background-repeat: no-repeat, repeat; background-position: center; /* Center the image */ background-size: cover; /* Resize the background image to cover the entire container */ /*    padding-top: 50px;*/ }
     h1 {
         font-weight: 400;
         text-align: center;
@@ -49,19 +44,13 @@
                     <td><img src="~/img/FoodPieChart/9-Milk.png" style="height: 250px; width: 350px " /></td>
                 </tr>
                 <tr><td></td></tr>
-                @*<tr><td></td></tr>*@
-                @*<tr><td></td></tr>
-                    <tr><td></td></tr>*@
             </tbody>
         </table>
-        @*<img src="~/img/1-CheeseSandwich.png" style="height: 250px; width: 350px" /> workssss
-            <img src="~/img/Photos/1-CheeseSandwich.png" style="height: 250px; width: 350px " /> workssss
-            <img src="~/img/Photos/1-CheeseSandwich.png" style="height: 250px; width: 350px " /> workssss*@
     </div>
 
     <div class="form-group row">
-        <div class="col-3">
-            <a asp-page="/WorldClimate/FoodCalculator" class="btn btn-primary form-control">Back</a> @*text-white*@
+        <div class="col-3 offset-9">
+            <a asp-page="/WorldClimate/FoodCalculator" class="btn btn-success form-control">Back</a> @*text-white*@
             @*C:\Users\randas\Documents\Book List Project\BookListRazor\BookListRazor\Pages\WorldClimate\FoodCalculator.cshtml*@
         </div>
     </div>
