--- a/BookListRazor/wwwroot/css/FoodCalculator.css
+++ b/BookListRazor/wwwroot/css/FoodCalculator.css
@@ -1,5 +1,6 @@
 ﻿body {
-    background-image: url("../../img/Deloitte/infrastructure/DEB_8923.jpg");
+    background-image: url("https://media.istockphoto.com/photos/super-food-or-vegetarian-food-concept-picture-id1026051248?k=6&m=1026051248&s=612x612&w=0&h=L0OI0AX2ZtE5dGtEZ75vobhzCSpmhNAfOMEg37bUTGI=");
+    /*background-image: url("https://envato-shoebox-0.imgix.net/a69b/d3f1-fec9-4918-92b4-9f392ad2438b/AD4A7575.jpg?auto=compress%2Cformat&fit=max&mark=https%3A%2F%2Felements-assets.envato.com%2Fstatic%2Fwatermark2.png&markalign=center%2Cmiddle&markalpha=18&w=700&s=269a39f61c5c7b617e7178645909e132");*/
     background-repeat: no-repeat, repeat;
     background-position: center; /* Center the image */
     background-size: cover; /* Resize the background image to cover the entire container */
