Aesthetics for About team Screen - logo pending

--- a/BookListRazor/Pages/WorldClimate/About.cshtml
+++ b/BookListRazor/Pages/WorldClimate/About.cshtml
@@ -35,10 +35,9 @@
 <table>
     <tbody>
         <tr>
-
             <th>
                 <div class="ranishacard">
-                    <p class="ranishacardpara text-light">
+                    <p class="ranishacardpara text-light" style="">
                         <i>
                             "This is my second time at <b>WinC Girl Hack It!</b> Hackathon event.
                             With a project level experience in ASP.NET C#, ASP.net MVC (in Entity framework and LLBL Gen using Visual studio, SSRS, SSMS), I also have interests Design, UI/UX.
@@ -54,7 +53,7 @@
             <td><img src="~/img/Team/Madhumita Card.png" style="height: 450px; width: 600px   " /></td>
             <th>
                 <div class="ranishacard">
-                    <p class="ranishacardpara text-white">
+                    <p class="ranishacardpara text-light">
                         <i>
                             "As a QA engineer, I have worked in different domains like investments and wealth management and currently I am working on Landlord management system. I am good at understanding the user-view-point, usability testing, understanding how functionality affects user’s life. <br /> This is a huge opportunity to bring all those skills to development. And I thank Deloitte and WinC community for providing such a great learning platform.
                             <br /><br />P.S. Let me save your valuable time: do not try to look for bugs, cuz you wouldn't find any! ;)"
