--- a/BookListRazor/wwwroot/css/About.css
+++ b/BookListRazor/wwwroot/css/About.css
@@ -1,19 +1,12 @@
 ﻿body {
-    background-image: url("../../img/Home/Earth/earthsafe.jpg");
-    /*        background-image: url("../../img/Home/Earth/earth1.jpg");*/
-    /*        C: \Users\randas\Documents\Book List Project\BookListRazor\BookListRazor\wwwroot\img\Home\Earth\earth1.jpg*/
-    /*        background-image: url("https://cdn.pixabay.com/photo/2019/09/24/16/05/storm-4501645_1280.jpg");*/
-    background-repeat: no-repeat, repeat;
+    /*    background-image: url("../../img/Home/Earth/earthsafe.jpg");*/
+    background-image: url("../../img/Home/Earth/earth1.jpg");
+/*    C: \Users\randas\Documents\Book List Project\BookListRazor\BookListRazor\wwwroot\img\Home\Earth\earth1.jpg background-repeat: no-repeat, repeat;*/
     background-position: center; /*center the image */
     background-size: cover; /*resize the background image to cover the entire container */
     -webkit-box-align: center;
     -ms-flex-align: center;
     align-items: center;
-    /*        background-color: #010a00;*/
-    /*        background-image: url("https://www.transparenttextures.com/patterns/3px-tile.png");*/
-    /*display: -webkit-box;
-        display: -ms-flexbox;
-        display: flex;*/
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
     font-size: 1rem;
 }
@@ -35,15 +28,16 @@
 }
 
     .ranishacard .ranishacardpara {
+        
 /*        border: 1px solid grey;*/
         padding: 10px 10px 10px 10px;
-        /*border-radius: 5px;*/
-        position: absolute;
-        margin-top: 100px;
+        border-radius: 5px;
+/*        position: absolute;*/
+        margin-top: 150px;
         margin-left: 50px;
-        padding: initial;
-        text-emphasis-color: #B4CF82;
-        text-decoration-color: #B4CF82;
+/*        padding: initial;*/
+       /* text-emphasis-color: #B4CF82;
+        text-decoration-color: #B4CF82;*/
     }
 
 a {
