Sanket's review comments - fixed

--- a/BookListRazor/Pages/WorldClimate/FoodCalculator.cshtml
+++ b/BookListRazor/Pages/WorldClimate/FoodCalculator.cshtml
@@ -214,8 +214,8 @@
             </div>
 
             <div class="container meal">
-                <div class="col-md-offset-4 ">
-                    <button type="submit" id="calculate" asp-route-data="foo" asp-page-handler="SellProduct" class="btn btn-success text-white ">Calculate</button>
+                <div class="col-3 offset-4 ">
+                   &nbsp;&nbsp;&nbsp; <button type="submit" id="calculate" asp-route-data="foo" asp-page-handler="SellProduct" class="btn btn-success text-white ">Calculate</button>
                     @*onclick="document.getElementById('firstMeal').value"*@
                 </div>
             </div>
