--- a/BookListRazor/Pages/WorldClimate/Readmore.cshtml
+++ b/BookListRazor/Pages/WorldClimate/Readmore.cshtml
@@ -29,7 +29,7 @@
     <div class="border container" style="padding: 30px; background-color:black; opacity:0.4;">
         <div class=" align-items-center" style="font-weight:600">
             <ul>
-                <li style="color:#86bc24;"><a href="https://www.dosomething.org/us/facts/11-facts-about-e-waste#fn6" target="_blank" style="color:#fff">11 facts about Ewaste</a></li>
+                <li style="color:#86bc24;"><a href="https://www.dosomething.org/us/facts/11-facts-about-e-waste#fn6" target="_blank" style="color:#fff">11 facts about E-waste</a></li>
                 <li style="color:#86bc24;"><a href="https://www.theworldcounts.com/stories/Electronic-Waste-Facts" target="_blank" style="color:#fff">Electronic Revolution - World Count</a></li>
                 <li style="color:#86bc24;"><a href="https://s2s.uk.com/news/10-shocking-facts-from-the-global-e-waste-monitor/" target="_blank" style="color:#fff">10 Shocking Facts from Global E-waste Monitor</a></li>
             </ul>
