Travel screens- BG modified & Food button centered

--- a/BookListRazor/Pages/WorldClimate/FoodCalculator.cshtml
+++ b/BookListRazor/Pages/WorldClimate/FoodCalculator.cshtml
@@ -215,7 +215,7 @@
 
             <div class="container meal">
                 <div class="col-3 offset-4 ">
-                   &nbsp;&nbsp;&nbsp; <button type="submit" id="calculate" asp-route-data="foo" asp-page-handler="SellProduct" class="btn btn-success text-white ">Calculate</button>
+                   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <button type="submit" id="calculate" asp-route-data="foo" asp-page-handler="SellProduct" class="btn btn-success text-white ">Calculate</button>
                     @*onclick="document.getElementById('firstMeal').value"*@
                 </div>
             </div>
