--- a/BookListRazor/Pages/WorldClimate/TravelStats.cshtml
+++ b/BookListRazor/Pages/WorldClimate/TravelStats.cshtml
@@ -2,7 +2,8 @@
 @*@model BookListRazor.Pages.FoodCalculatorModel*@
 <style>
     body {
-        background-image: url("https://cdn.pixabay.com/photo/2019/09/24/16/05/storm-4501645_1280.jpg");
+        background-image: url("https://i.pinimg.com/originals/fe/ce/66/fece66963c414662333f7884a70dbde3.jpg");
+/*        background-image: url("https://cdn.pixabay.com/photo/2019/09/24/16/05/storm-4501645_1280.jpg");*/
         background-repeat: no-repeat, repeat;
         background-position: center; /* Center the image */
         background-size: cover; /* Resize the background image to cover the entire container */
@@ -62,7 +63,7 @@
 
     <div class="form-group row">
         <div class="col-3 offset-9">
-            <a asp-page="/WorldClimate/CascadingDropdownsModel" class="btn btn-success form-control">Back</a> @*text-white*@
+            <a asp-page="/WorldClimate/CascadingDropdownsModel" class="btn btn-info form-control">Back</a> @*text-white*@
             @*C:\Users\randas\Documents\Book List Project\BookListRazor\BookListRazor\Pages\WorldClimate\CascadingDropdownsModel.cshtml*@
         </div>
     </div>
