--- a/BookListRazor/Pages/WorldClimate/CascadingDropdownsModel.cshtml
+++ b/BookListRazor/Pages/WorldClimate/CascadingDropdownsModel.cshtml
@@ -15,7 +15,7 @@
 <body>
     <div class="container" style="align-content:flex-end ; ">
         <h1 class="neon display-4 text-monospace ">Consider travel activity</h1><br />
-        <a class="nav-link text-light " asp-area="" asp-page="/WorldClimate/TravelStats">Check your travel statistics here!</a>
+        <a class="nav-link text-dark " asp-area="" asp-page="/WorldClimate/TravelStats">Check your travel statistics here!</a>
     </div>
     <div class="container">
         <div class="row">
