--- a/BookListRazor/wwwroot/css/TravelCalculator.css
+++ b/BookListRazor/wwwroot/css/TravelCalculator.css
@@ -1,9 +1,10 @@
 ﻿body {
-    background-image: url("https://cdn.pixabay.com/photo/2019/09/24/16/05/storm-4501645_1280.jpg");
+    background-image: url("https://i.pinimg.com/originals/fe/ce/66/fece66963c414662333f7884a70dbde3.jpg");
+    /*    background-image: url("https://cdn.pixabay.com/photo/2019/09/24/16/05/storm-4501645_1280.jpg");*/
     background-repeat: no-repeat, repeat;
-    background-position: center;  /*center the image */
-    background-size: cover;  /*resize the background image to cover the entire container */
-/*    padding-top: 50px;*/
+    background-position: center; /*center the image */
+    background-size: cover; /*resize the background image to cover the entire container */
+    /*    padding-top: 50px;*/
 }
 
 .login-form {
